working-assets/css/plp.css
.section--collection-header,
.section--search-header {

  & h1 {
    margin: 0;
  }

  & .rtf {
    margin-block: 1em;
  }
}

.collection-heading {
  position: relative;
}

.collection-blurb {
  height: 3.6em;
  line-height: 1.2;
  overflow: hidden;
  transition: height 0.2s var(--bezier);

  &.active {
    height: auto;

    & .expand-blurb {
      display: none;
    }
  }

  & .expand-blurb {
    content: "Read more >";
    display: block;
    position: absolute;
    bottom: 0;
    right: 0;
    background-color: var(--c-white);
    width: min(50%, 60ch);
    background: linear-gradient(150deg, transparent 10%, var(--c-white) 40%);
    text-align: right;
    color: var(--c-grey);
    pointer-events: all;
    cursor: pointer;
  }
}

.product_type-bar {
  overflow: visible;
  
}

#search_page-form {
  width: 70%;
  align-items: center;
  flex-direction: column;
  justify-content: center;
  margin-top: 0;

  & .search_form-terms-input {
    margin: 0 auto;
  }
}

product-types {
  display: flex;
  gap: 1em;
  justify-content: center;
  align-items: center;
  border-top: 1px solid var(--c-light-grey);
  padding: 1em 1.5em;
  height: 3.5em;

  & .splide__arrow {
    position: absolute;
    top: 50%;
    translate: 0 -50%;
    left: -1.5em;
    display: grid;

    & svg {
      height: 10px;
      fill: var(--c-light-grey)
    }
  }

  & .splide__arrow--next {
    left: auto;
    right: -1.5em;
  }
}

infinite-scroll,
.article-grid {
  height: 100%;
  overflow: auto;
  display: grid;
  grid-auto-flow: dense;
  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
  gap: 0 0.65em;
  place-content: center;
}

infinite-scroll {
  opacity: 0;
  transition: opacity 0.3s ease-out;
  overflow-y: hidden;
&.max-width {
    margin-top: 100vh;
  }
}

.small-grid {
  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
}

.large-grid {
  grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
}

.grid-nav {
  display: flex;
  justify-content: space-between;
  margin-bottom: 0;

    &#pagination-next a {
        width: 100%;
      }
  & a {
    display: flex;
    align-items: center;
    gap: 0.5em;
    flex: 0 1 auto;
  }
}

#first-page,
#infinite-trigger {
  display: flex;
  justify-content: flex-end;
}

#infinite-trigger {
  & .loader {
    display: none;
    opacity: 0;
  }

  &.loading {
    & .loader {
      opacity: 1;
      display: block
    }

    & .inline-flex {
      display: none;
    }
  }
}

#back-to-top {
  display: flex;
  justify-content: center;
}

.product-grid-insert {
  margin-bottom: 20px;
  grid-column: 1 / -1;
  overflow: hidden;

  & img {
    height: 100%;
    object-fit: cover;
    scale: 1;
      filter: brightness(1);
      transition: scale 60s var(--bezier), filter 0.15s var(--bezier);
    }

    &:hover img {
      scale: 1.05;
      filter: brightness(1.05);
  }
}

@media screen and (width > 700px) {
  .product-grid-insert {
    grid-column: span 2;

  }
}

@media screen and (width > 500px) {

  infinite-scroll {
    grid-template-columns: repeat(auto-fill, minmax(225px, 1fr));
  }

  .small-grid {
    grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
  }

  .large-grid {
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  }

  #search_page-form {
    flex-direction: row;
    justify-content: flex-end;
    margin-right: 0;

    & p {
      flex: 0 0 max-content;
    }
  }
}

@media screen and (width > 700px) {
  .section--collection-header {
    padding-top: 0;

    &>div {
      display: flex;
      align-items: center;
      gap: 2em;
      margin-block: 2rem;

      & .no-block-margin {
        flex: 1 0 33%;
        text-align: left;
      }
    }
  }

  .collection-blurb {
    height: auto;

    & .expand-blurb {
      display: none;
    }
  }

  .section--search-header {
    display: flex;
    align-items: center;
    gap: 2em;
    padding: 1em 0;

    & h1 {
      text-align: left;
    }
  }
}

@media screen and (width > 1020px) {
  infinite-scroll {
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
  }

  .small-grid {
    grid-template-columns: repeat(auto-fill, minmax(190px, 1fr));
  }

  .large-grid {
    grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
  }
}

.tagg-reset.tagg-balloon.tagg-quantity_orders.tagg-QP,
.tagg-reset.tagg-balloon.tagg-quantity_orders.tagg-QPH.tagg-hot {
  height: max(24px, 100%) !important
}

ometria-form {
  & .rtf {

    & h1,
    & h2,
    & p {
      text-align: center;
    }

    & h2 {
      font-size: var(--txt-h3);
    }

    & p {
      margin-bottom: 2rem;
    }
  }
}

